syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "robust-app/service";

service Users {
  // unary pattern
  rpc GetUser (UserGetRequest) returns (User) {}
  rpc RisePanic (PanicTestMessage) returns (PanicTestMessage) {}

  // server-side stream
  rpc CreateUser (User) returns (stream UserCreateLog){}
  rpc RiseStreamPanic (PanicTestMessage) returns (stream PanicTestMessage) {}

  // client-side stream
  rpc GetUsers (stream User) returns (UsersList){}

  // bi-directional stream
  rpc GetHelp (stream UserHelpRequest) returns (stream UserHelpResponse) {}
}

message User {
  string id = 1;
  string first_name = 2;
  string last_name = 3;
}

message UsersList {
  repeated User users = 1;
}

message UserGetRequest {
  string id = 1;
  string full_name = 2;
}

message UserCreateLog {
  google.protobuf.Timestamp timestamp = 1;
  string log = 2;
}

message UserHelpRequest {
  User user = 1;
  string request = 2;
}

message UserHelpResponse {
  string response = 1;
}

message PanicTestMessage {
  string message = 1;
}